# semantic-control-plane

./: .gitignore  LICENSE  README.md  pyproject.toml
project-memory-bank/: 00-project-vision.md  01-strategic-thesis.md  02-system-architecture.md  03-current-state.md  04-roadmap.md  11-memory-model.md  14-trust-model.md  18-ui-design-system.md  26-active-initiatives.md  30-session-handoff.md  99-development-rules.md  README.md
project-memory-bank/adr/: ADR-000-template.md  ADR-001-python-stack.md  ADR-002-memory-core-storage.md  ADR-003-knowledge-graph-storage.md  ADR-004-semantic-query-engine.md  ADR-005-trust-engine.md  ADR-006-agent-runtime.md  ADR-007-flight-recorder.md  ADR-008-governance-layer.md
scp/: __init__.py
scp/agent/: __init__.py  context.py  enums.py  errors.py  lifecycle.py  models.py  runtime.py  tools.py
scp/governance/: __init__.py  audit.py  engine.py  enums.py  errors.py  governance.py  models.py  store.py
scp/graph/: __init__.py  core.py  enums.py  errors.py  models.py  store.py  traversal.py
scp/memory/: __init__.py  core.py  enums.py  errors.py  lifecycle.py  models.py  store.py
scp/query/: __init__.py  embeddings.py  engine.py  enums.py  errors.py  models.py  planner.py  ranking.py  vector_store.py
scp/recorder/: __init__.py  debug.py  errors.py  models.py  recorder.py  replay.py  store.py  trace.py
scp/trust/: __init__.py  confidence.py  contradiction.py  engine.py  enums.py  errors.py  models.py  registry.py  scoring.py  verification.py
tests/: conftest.py
tests/agent/: conftest.py  test_context.py  test_integration.py  (+3 more)
(+46 files in other folders)
